Compass: fix offcentered dial, resolves #60

--- a/src/components/Compass.css
+++ b/src/components/Compass.css
@@ -3,6 +3,5 @@
   position: relative;
   height: 106vmin;
   width: 106vmin;
-  margin-left: -3vmin;
   flex: 3;
 }
